# setgame

./: .gitignore  LICENSE  Pipfile  README.md  idead.md  pyproject.toml  utils.py
.github/workflows/: main.yml
annotator/: annotator.py  notebook_annotator.ipynb  notebook_annotator.py
base_class/: label.py
base_classes/: label.py
notebooks/: Set_test.ipynb  scratch_annotator.ipynb  segmentboard_demo.ipynb  test scratch.ipynb
notebooks/scratch/: scratch.ipynb  scratch_dev.ipynb
scripts/: segment_all_board_images.py  segment_cards_from_board_image.py  solve_board.py  train_card_classifier.py
segmentboard/: segmentboard.py
segmentboard/scripts/: segment_all.py  segment_cards.py
setgame/classify_card/: dataset.py  model.py  predict.py  train.py
setgame/draw_solution/: draw_solution.py
setgame/find_set/: find_set.py
setgame/notebooks/: data_augmentation.py  segmentboard_demo.ipynb
setgame/segmentboard/: segmentboard.py
test/: test_base_class.py
test/segmentboard/: test_binarize_image.py  test_crop.py  test_extract_cards.py
tests/: test_base_class.py  test_utils.py  testbase_class.py
tests/base_classes/: test_label.py
tests/classify_card/: test_dataset.py  test_model.py
tests/draw_solution/: test_draw_solution.py
tests/find_set/: test_find_set.py
tests/segmentboard/: test_add_frame.py  test_binarize_image.py  test_crop.py  test_extract_cards.py  test_img_ratio.py  test_lower_cut_points.py  test_mean_row_col.py  test_segment_board.py  test_turn.py
utils/: change_img_names.py  format.py  save_imgs.py
utils_old/: format.py
(+2 files in other folders)
